--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   bot:
     image: "${BOT_IMAGE_NAME:-tg_bot-image}"
-    container_name: "${BOT_CONTAINER_NAME:-tg_bot-container}"
+    # container_name: "${BOT_CONTAINER_NAME:-tg_bot-container}"
     stop_signal: SIGINT
     build:
       context: .
@@ -14,8 +14,58 @@ services:
     restart: always
     env_file:
       - ".env"
+    depends_on:
+      - db
+      - redis
     networks:
     - tg_bot
+
+  redis:
+    # container_name: "${BOT_CONTAINER_NAME:-tg_bot-redis}"
+    image: 'bitnami/redis:latest'
+    hostname: redis
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - tg_bot
+    env_file:
+    - ".env"
+
+  db:
+    container_name: "${BOT_CONTAINER_NAME:-tg_bot-database}"
+    hostname: db
+    image: postgres:10.5
+
+    environment:
+      - POSTGRES_DB=$DB_NAME
+      - POSTGRES_USER=$DB_USER
+      - POSTGRES_PASSWORD=$DB_PASS
+    restart: always
+    networks:
+      - tg_bot
+    env_file:
+      - ".env"
+    volumes:
+      - ./postgres:/var/lib/postgresql
+
+  django:
+    # container_name: "${BOT_CONTAINER_NAME:-tg_bot-django}"
+    image: "${BOT_IMAGE_NAME:-django-image}"
+    build: 
+      context: .
+    working_dir: "/usr/src/app/${BOT_NAME:-tg_bot}"
+    volumes:
+      - .:/usr/src/app/${BOT_NAME:-tg_bot}
+    command: python django_manage.py runserver 0:8000
+    ports:
+      - '8000:8000'
+    depends_on:
+      - db
+    env_file:
+      - '.env'
+    networks:
+      - tg_bot
+
 
 
 networks:
